Discount Spacing Fix
Issued a fix for the Discount component floating 1px above the bottom
of the card.

--- a/src/components/capsule-card/CapsuleCard.scss
+++ b/src/components/capsule-card/CapsuleCard.scss
@@ -21,7 +21,7 @@
   }
 
   &__discount {
-    transform: translateY(0);
+    transform: translateY(1);
     transition: transform .4s ease-out;
   }
 
